	PR bootstrap/19364 	* config.gcc (sparc-*-elf*): Remove sol2.h, sparc/sol2.h and 	sparc/elf.h, add sparc/sp-elf.h. 	(sparc-*-rtems*): Likewise. 	(sparclite-*-elf*): Remove sol2.h, sparc/sol2.h, sparc/elf.h and 	tm-dwarf2.h, add sparc/sp-elf.h. 	(sparc86x-*-elf): Likewise. 	(sparc64-*-elf*): Remove sol2.h, sparc/sol2.h and tm-dwarf2.h. 	* config/sparc/liteelf.h (TARGET_SUB_OS_CPP_BUILTINS): Rename into 	TARGET_OS_CPP_BUILTINS. 	* config/sparc/sp86x-elf (TARGET_SUB_OS_CPP_BUILTINS): Likewise. 	* config/sparc/rtemself.h (TARGET_SUB_OS_CPP_BUILTINS): Likewise. 	Undefine it. 	* config/sparc/openbsd64.h (NO_IMPLICIT_EXTERN_C): Undefine. 	* config/sparc/sp64-elf.h (NO_IMPLICIT_EXTERN_C): New macro. 	(SWITCH_TAKES_ARG): Likewise. 	(LOCAL_LABEL_PREFIX): Likewise. 	(ASM_GENERATE_INTERNAL_LABEL): Likewise. 	(TARGET_N_FORMAT_TYPES): Delete. 	(TARGET_FORMAT_TYPES): Likewise. 	(ASM_DECLARE_FUNCTION_SIZE): Likewise. 	* config/sparc/elf.h: Delete. 	* config/sparc/sp-elf.h: New file.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@94185 138bc75d-0d04-0410-961f-82ee72b054a4