gcc/config/sparc/sp86x-elf.h
@@ -1,5 +1,5 @@
 /* Definitions of target machine for GCC, for sparclite 86x w/o FPU.
-   Copyright (C) 1998, 1999, 2000 Free Software Foundation, Inc.
+   Copyright (C) 1998, 1999, 2000, 2005 Free Software Foundation, Inc.
    Contributed by Stan Cox (scox@cygnus.com).
 
 This file is part of GCC.
@@ -19,16 +19,16 @@ along with GCC; see the file COPYING.  If not, write to
 the Free Software Foundation, 59 Temple Place - Suite 330,
 Boston, MA 02111-1307, USA.  */
 
-#undef  TARGET_SUB_OS_CPP_BUILTINS
-#define TARGET_SUB_OS_CPP_BUILTINS()		\
+#undef TARGET_VERSION
+#define TARGET_VERSION fprintf (stderr, " (sparclite 86x)");
+
+#undef TARGET_OS_CPP_BUILTINS
+#define TARGET_OS_CPP_BUILTINS()		\
   do						\
     {						\
 	builtin_define ("__sparclite86x__");	\
     }						\
   while (0)
-
-#undef TARGET_VERSION
-#define TARGET_VERSION fprintf (stderr, " (sparclite 86x)");
 
 /* Enable app-regs and epilogue options.  Do not enable the fpu.  */
 
